<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enterTask"
        android:layout_width="292dp"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:text="Click the + at the upper right to enter your Most Important Thing"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_goals"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/no_goals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Goals for the Day"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />
</androidx.constraintlayout.widget.ConstraintLayout>